<resources>
<!--    Standard-->
    <string name="app_name">Scavenger Hunt</string>
    <string name="title_activity_maps">Map</string>

<!--    activity_create_hunt.xml    -->
<string name="select_location_button">Select</string>
    <string name="start_create_new_hunt_button">Save Hunt</string>
    <string name="trespass_message">Please do not trespass while playing</string>

<!--    activity_main.xml -->
    <string name="info_title">Information:</string>
    <string name="start_select_hunt">Select Tresure Hunt</string>
    <string name="create_new_hunt">Create new</string>

<!--    activity_maps.xml-->
    <string name="placeholder_metersFromLoc"> </string>

<!--    dialog_create_question.xml-->
    <string name="hint_question">Enter your questions here</string>
    <string name="hint_answer1">Answer 1</string>
    <string name="hint_answer2">Answer 2</string>
    <string name="hint_answer3">Answer 3</string>
    <string name="add_loc_dialog_button">Add</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="radius_text">Radius in  meters</string>

<!--    dialog_question.xml-->
    <string name="placeholder_question">Loading…</string>
    <string name="placeholder_button_answer1">Loading…</string>
    <string name="placeholder_button_answer2">Loading…</string>
    <string name="placeholder_button_answer3">Loading…</string>

<!--    activity_done.xml-->
    <string name="congratulations_text">Congratulations!</string>

<!--    activity_done_dialog-->
    <string name="question_text">Questions:</string>
    <string name="hours_text">Hours:</string>
    <string name="minutes_text">Minutes:</string>
    <string name="seconds_text">Seconds:</string>
    <string name="save_hunt_button">Start</string>
    <string name="button_done">Done</string>

<!--    menu-->
    <string name="sort_title">Title</string>
    <string name="sort_author">Author</string>
    <string name="sort_date">Date</string>

<!--    misc-->
    <string name="placeholder">Placeholder text</string>
</resources>
