<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/info_title"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/button_start_selected"
            android:layout_alignParentTop="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:hapticFeedbackEnabled="true"
            android:text="@string/start_select_hunt"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_create_new"
            android:layout_below="@+id/button_start_selected"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:hapticFeedbackEnabled="true"
            android:text="@string/start_create_new_hunt_button"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>