<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_question"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/rel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <EditText
            android:id="@+id/edit_field_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/hint_answer1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_field_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_field_1"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/hint_answer2"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_field_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_field_2"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/hint_answer3"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/edit_field_1"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

        </RadioGroup>

        <Button
            android:id="@+id/cancel_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/red"
            android:hapticFeedbackEnabled="true"
            android:padding="15dp"
            android:text="@string/cancel_dialog_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/add_new_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/cancel_loc"
            android:backgroundTint="@color/green"
            android:hapticFeedbackEnabled="true"
            android:padding="15dp"
            android:text="@string/add_loc_dialog_button"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_dialog">

        <TextView
            android:id="@+id/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="radius"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerHorizontal="true" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_below="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:min="10"
            android:max="50"/>
    </RelativeLayout>



</RelativeLayout>