<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_layout_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:text="@string/question_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/question_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_layout_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_layout_question"
        android:layout_margin="20dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/hours_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hours_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_layout_minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_layout_hours"
        android:layout_margin="20dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/minutes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/minutes_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/minutes_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_layout_seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_layout_minutes"
        android:layout_margin="20dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/seconds_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/seconds_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/seconds_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>